2004-06-27  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Improved comments on what is going and why. Also
	  improved a little in determining the size of the image. Now it 
	  ignores points with no aperture defined, unless it is a polygon 
	  area.

2004-06-24  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Removed two potential segfaults when running old
	  RS-274D format.

	* src/gerber.c, src/batch.c, src/gerb_image.[hc]: Actually removed
	  all traces of MQ_END and MQ_START. That means that empty nodes 
	  with only this information isn't saved, since the only time we need
	  this information is when parsing arcs. When an arc is parsed
	  the information wheter that arc is multi or single quadrant is
	  saved there. Also closes bug #942590.

	* src/gerbv.c, src/gerbv_screen.h, src/gerb_image.c, src/gerb_image.h:
	  Added possibility to dump a parsed image as text to be able to
	  debug the parser.

2004-06-10  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw_amacro.c: By mistake I assumed that all aperture 
	  macros had exposure flags, but that was a mistake. Drew Moore
	  pointed it out to me. Thanks.

2004-06-05  Stefan Petersen  <spe@stacken.kth.se>

	* */.cvsignore, man/gerbv.1.in, src/gerbv.c: Minor updates and 
	  cleanups from Dimitri. --help added for instance.

-- Release 0.16 --

2004-05-25  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw_amacro.c: Now aperture macros handles exposures properly,
	  so some thermals can be drawn properly. Inspired by discussion with
	  Dimitri.


2004-05-19  Stefan Petersen  <spe@stacken.kth.se>

	* man/gerbv.1.in, src/Makefile.am, src/drill.c, src/gerbv.c, 
	  src/tooltable.c, src/tooltable.h: Patch from Dimitri 
	  (lastname unknown) to read tool files from for instance Eagle CAD.

2004-04-27  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in, src/drill.c: Patch from Tomasz Motylewski as a start
	  remove dependencies on mmap et al (sys/mman.h) for targets lacking